# PomoStudy

./: README.md  package-lock.json
backend/: .gitignore  README.md  elevenz.py  flake.nix  generate_default_audio.py  main.py  pyproject.toml  requirements.txt  test_elevenz.py  views.py
backend/src/: elevenz.py  main.py  views.py
backend/src/services/: flashcard_service.py  gemini_client.py  generate_default_audio.py
backend/tests/: test_elevenz.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: audioApi.ts
frontend/src/components/: BackgroundAudio.tsx  ChatInterface.tsx  ChatMessage.tsx  ConfigurationPanel.tsx  FlashcardUpload.tsx  FlashcardViewer.tsx  PomodoroTimer.tsx  VoiceMotivator.tsx  VoiceToggle.tsx
frontend/src/pages/: Home.tsx  Onboarding.tsx  Settings.tsx
frontend/src/types/: settings.ts
